examples/tests/invalid/inflight_class_dup_init.w
inflight class Foo {
  init() {

  }

  inflight init() {

  }
//^ Multiple inflight initializers defined in class Foo
}
